Added changes to the MongoDB to include a collection that has at least 7 properties. Commiting to test in our render environment.
