# controllers/contacts.js
@@ -45,7 +45,9 @@ const createContact = async (req, res) => {
             lastName: req.body.lastName,
             email: req.body.email,
             favoriteColor: req.body.favoriteColor,
-            birthday: req.body.birthday
+            birthday: req.body.birthday,
+            location: req.body.location,
+            sidekick: req.body.sidekick
         };
         const response = await mongodb.getDatabase().db('project2').collection('contacts').insertOne(contact);
         if (response.acknowledged) {
@@ -76,7 +78,9 @@ const updateContact = async (req, res) => {
             lastName: req.body.lastName,
             email: req.body.email,
             favoriteColor: req.body.favoriteColor,
-            birthday: req.body.birthday
+            birthday: req.body.birthday,
+            location: req.body.location,
+            sidekick: req.body.sidekick
         };
         const response = await mongodb.getDatabase().db('project2').collection('contacts').replaceOne({ _id: contactId }, contact);
         if (response.modifiedCount > 0) {
